--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    !00 days challenge
+    100 days challenge
+    <h1>It was the rainy day in Karachi </h1>
 </body>
 </html>
