--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Java Repository</title>
 </head>
 <body>
-    100 days challenge
-    <h1>It was the rainy day in Karachi </h1>
+
+    <h1>JAVA'S CHAPTER</h1>
+    <h1><a href="chapter 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h1>
+
+
+
+    <h1><a href="chapter 2/index.html">CHAPTER NO 2 ASSIGNMENT</a></h1>
+
+
+
+    <h1><a href="chapter 3/index.html">CHAPTER NO 3 ASSIGNMENT</a></h1>
+
+
+
+    <h1><a href="chapter 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h1>
+
+
+
+
+      
+
+
+
+
+
+
+
+
+
+    <script src="java.js"></script>
 </body>
 </html>
