--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Java Repository</title>
 </head>
 <body>
 
-    <h1>JAVA'S CHAPTER</h1>
+    <h1 class="animate__animated animate__rotateInDownLeft animate__heartBeat">JAVASCRIPT CHAPTERs</h1>
     <h1><a href="chapter 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h1>
 
 
@@ -21,7 +25,23 @@
 
 
 
+
     <h1><a href="chapter 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h1>
+
+
+
+
+    <h1><a href="chapter 5/index.html">CHAPTER NO 5 ASSIGNMENT</a></h1>
+
+
+
+
+    <h1><a href="chapter 6/index.html">CHAPTER NO 6 ASSIGNMENT</a></h1>
+
+
+
+
+    <h1><a href="chapter 7/index.html">CHAPTER NO 7 ASSIGNMENT</a></h1>
 
 
 
