--- a/index.html
+++ b/index.html
@@ -7,50 +7,38 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-    <title>Java Repository</title>
+    />
+    <title>JAVASCRIPT Repository</title>
 </head>
 <body>
 
     <h1 class="animate__animated animate__rotateInDownLeft animate__heartBeat">JAVASCRIPT CHAPTERs</h1>
 
-    <h3><a href="chapter 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h3>
 
 
-    <h3><a href="chapter 2/index.html">CHAPTER NO 2 ASSIGNMENT</a></h3>
+            <h3><a href="chapter 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h3>
 
 
-    <h3><a href="chapter 3/index.html">CHAPTER NO 3 ASSIGNMENT</a></h3>
+            <h3><a href="chapter 2/index.html">CHAPTER NO 2 ASSIGNMENT</a></h3>
 
 
-
-    <h3><a href="chapter 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h3>
-
+            <h3><a href="chapter 3/index.html">CHAPTER NO 3 ASSIGNMENT</a></h3>
 
 
 
-    <h3><a href="chapter 5/index.html">CHAPTER NO 5 ASSIGNMENT</a></h3>
+            <h3><a href="chapter 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h3>
 
 
 
-
-    <h3><a href="chapter 6/index.html">CHAPTER NO 6 ASSIGNMENT</a></h3>
-
+            <h3><a href="chapter 5/index.html">CHAPTER NO 5 ASSIGNMENT</a></h3>
 
 
 
-    <h3><a href="chapter 7/index.html">CHAPTER NO 7 ASSIGNMENT</a></h3>
+            <h3><a href="chapter 6/index.html">CHAPTER NO 6 ASSIGNMENT</a></h3>
 
 
 
-
-      
-
-
-
-
-
-
+            <h3><a href="chapter 7/index.html">CHAPTER NO 7 ASSIGNMENT</a></h3>
 
 
 
