--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
 
 
 
-            <h3><a href="chapter 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h3>
+            <h3><a href="day 1/index.html">CHAPTER NO 1 ASSIGNMENT</a></h3>
 
 
-            <h3><a href="chapter 2/index.html">CHAPTER NO 2 ASSIGNMENT</a></h3>
+            <h3><a href="day 2/index.html">CHAPTER NO 2 ASSIGNMENT</a></h3>
 
 
-            <h3><a href="chapter 3/index.html">CHAPTER NO 3 ASSIGNMENT</a></h3>
+            <h3><a href="day 3/index.html">CHAPTER NO 3 ASSIGNMENT</a></h3>
 
 
-
-            <h3><a href="chapter 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h3>
-
+            <h3><a href="day 4/index.html">CHAPTER NO 4 ASSIGNMENT</a></h3>
 
 
-            <h3><a href="chapter 5/index.html">CHAPTER NO 5 ASSIGNMENT</a></h3>
+            <h3><a href="day 5/index.html">CHAPTER NO 5 ASSIGNMENT</a></h3>
 
 
-
-            <h3><a href="chapter 6/index.html">CHAPTER NO 6 ASSIGNMENT</a></h3>
-
+            <h3><a href="day 6/index.html">CHAPTER NO 6 ASSIGNMENT</a></h3>
 
 
-            <h3><a href="chapter 7/index.html">CHAPTER NO 7 ASSIGNMENT</a></h3>
+            <h3><a href="day 7/index.html">CHAPTER NO 7 ASSIGNMENT</a></h3>
+
+
+            <h3><a href="day 8/index.html">CHAPTER NO 8 ASSIGNMENT</a></h3>
+
+
+            <h3><a href="day 9/index.html">CHAPTER NO 9 ASSIGNMENT</a></h3>
 
 
 
