--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <h3><a href="day 9/index.html">CHAPTER NO 9 ASSIGNMENT</a></h3>
 
 
+            <h3><a href="day 10/index.html">CHAPTER NO 10 ASSIGNMENT</a></h3>
+
+
+            <h3><a href="day 11/index.html">CHAPTER NO 11 ASSIGNMENT</a></h3>
+
 
     <script src="java.js"></script>
 </body>
