--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <h3><a href="day 11/index.html">CHAPTER NO 11 ASSIGNMENT</a></h3>
 
 
+            <h3><a href="day 12/index.html">CHAPTER NO 11 ASSIGNMENT</a></h3>
+
+
+
     <script src="java.js"></script>
 </body>
 </html>
