--- a/day 3/index.html
+++ b/day 3/index.html
@@ -9,7 +9,8 @@
 
 
    <h1>Javacript chapter 03</h1>
-    
+    <h2>Control Flow (if...else statements, switch 
+        statements, loops)</h2>
 
 
 
